text translating - some titles are missing, eg 'Webmaker'

--- a/locales/pl.ini
+++ b/locales/pl.ini
@@ -1,6 +1,40 @@
 [pl]
 lang-selection = Język:
+progquestion = W czym jesteś dobry?
+writecode = Pisanie kodu
+testsoftware = Testowanie oprogramowania
+usersupport = Wspracie użytkownika
+translation = Tłumaczenie
+advocacy = Promocja
+teaching = Nauczanie
+uxdesign = Projektowanie UX
 question = Jaki jest twój ulubiony język programowania?
+qa-intro = Więc lubisz odnajdywać błędy innych programistów?
+webqa-extra = Wspieranie serwisów i stron Mozilli automatyzacją i testami
+ffqa-extra = pomóż nam znajdować błędy w Firefoxie
+thunderbirdqa-extra = pomóż nam znajdować błędy w Thunderbirdzie
+ff-bugday-extra = pomóż w klasyfikacji nowych i starych błędów
+ff-nightly-extra = używaj najnowszej przeglądarki i raportuj błędy
+teach-intro = A więc lubisz dzielić się swoją wiedzą? Mógłbyś nauczać
+webmake-extra = programowania apliakcji internetowych i informatyki
+hackasaurus-extra = łatwe miksowanie istniejącego kontentu web
+uxdesign-intro = Uwielbiasz wymyślać nowe sposoby na interakcję z aplikacjami i stronami? Mógłbyś pracować nad
+creative-extra = projektowanie użytecznych, łatwych w obsłudze, wspaniałych projektów Mozilli
+advocate-intro = Lubisz mówić ludziom o Mozilli? Mógłbyś pomóc z
+aff-extra = pokaż swoją dumę z Mozilli i Firefoxa
+evan-extra = wytłumacz autorom stron www jak pisać dla otwartej sieci
+translate-intro = Czy mówisz innym językiem niż angielski? Możesz przetłumaczyć
+treeherder-extra = backend i pulpit raportowania dla list zdań Mozilli
+l10nweb-extra = wszystkie większe strony Mozilli
+l10n-extra-tb = klienta poczty email dostępnego w ponad 50 językach
+l10n-extra-ff = przeglądarkę dostępną w ponad 80 językach
+l10n-extra-fxan = przeglądarkę mobilną dostępną w ponad 60 językach
+l10n-extra-sumo = przetłumacz artykuły z pomocą na twój język
+support-intro = Lubisz pomagać innym i być dla nich mentorem? Możesz dołączć do
+sumo-extra = popularne forum ze wsparciem dla wszystkich produktów Mozilli
+sumoaoa-extra = pomagaj użytkownikom w czasie rzeczywistym poprzez Twittera
+sumokb-extra = zapisz rozwiązania dla często występujących problemów
+user-advocacy-extra = czytaj i wyodrębniaj opinie użytkowników Firefoxa
 cpp-intro = A więc lubisz długie czasy kompilacji i niezrozumiałe komunikaty o błędach? Świetnie, my także. Projekt nad którym mógłbyś pracować, to
 cpp-gecko-extra = silnik który napędza Firefoksa
 cpp-thunderbird-extra = open-source'owy klient poczty
@@ -20,30 +54,46 @@ js-webextensions-extra = podstawa na której tworzone są wszystkie świetne plu
 js-dxr-extra = inteligentny system indeksujący kod źródłowy
 js-thunderbird-extra = open-source'owy klient email
 js-seamonkey-extra = sieciowy, open-source'owy pakiet biurowy
+js-instantbird-extra = open source'owy, rozszerzalny, multiprotokołowy klient chat
 js-webdev-extra = mamy wiele dużych, skomplikowanych projektów korzystających z JavaScript
+js-bmo-extra = narzędzie do śledzenia błędów używane w projektach Mozilli
+js-webmaker-extra = pomóż projektować i budować oprogramowanie które ułatwi bycie kreatywnym w sieci
+js-fireplace-extra = Frontend dla Firefox Marketplace
+js-telemetry-extra = biblioteka do wizualizacji danych dla interpretacji statystyk użytkowników
 java-intro.innerHTML = A więc jesteś wyznawcą <strong><code>AbstractMethodFactoryBean</code></strong>? To świetnie, my także mamy swoje wady. Projekt nad którym mógłbyś pracować to
 java-mobile-extra = to silnik Gecko z UI typowym dla Androida. Urządzenie z systemem Android nie jest wymagane
+java-mozstumbler-extra = Weż swojego Androida na spacer i pomóż oznaczyć sieci bezprzewodowe na świecie
 py-intro = A więc paradygmat programowania sterowanego backtrace'ami sprawia Ci przyjemność? Świetnie, każdego czasem nudzi statyczne typowanie. Projekt nad którym mógłbyś pracować, to
+perl-intro = Więc lubisz dolary lecz nie chcesz używać PHP? Spoko, wszystkjich czasami męczy rozkminianie kodu. Możesz pracować nad
+perl-bmo-extra = narzędzie do śledzenia błędów używane w projektach Mozilli
 py-firefox-extra = sporo kodu jest generowane przez Pythonowe skrypty
 py-webdev-extra = mamy wiele dużych, skomplikowanych projektów napisanych w Pythonie
 py-dxr-extra = inteligentny system indeksowania kodu źródłowego
 py-tools-extra = różne projekty ułatwiające automatyczne testowanie produktów
+py-webqa-extra = twórz testy automatyczne dla stron Mozilli
+py-releng-extra = Proces budowania, testowania i wypuszczania w Mozilli
 php-intro = A więc lubisz kiedy nazwy twoich zmiennych zawierają znak dolara? To świetnie, wszyscy czasem tęsknimy za Perlem. Projekt nad którym mógłbyś pracować, to
 php-wordpress-extra.innerHTML = kod, który napędza nasze <a href="https://blog.mozilla.org">blogi</a>
 php-mediawiki-extra.innerHTML = plugin Bugzilli dla <a href="https://wiki.mozilla.org">MediaWiki Mozilli</a>
-rust-intro = A więc lubisz myśleć o czasach życia i zarządzaniu zasobami? Świetnie, wszyscy tak naprawdę jesteśmy masochistami. Mógłbyś pracować nad
-rustc-extra = kompilator i standardowa biblioteka rust napisana w rust
-servo-extra = nowa przeglądarka zaprojektowana dla zrównoleglenia i bezpieczeństwa
+php-transvision-extra = narzędzie QA dla lokalizerów produktów Mozilli
 ff-cpp-intro = Świetnie, jednak niezbyt dokładnie. Projekt nad którym mógłbyś pracować, to
 ff-cpp-ff-extra = Właściwie to nie obchodzą mnie szczegóły
 ff-cpp-graphics-extra = dużo pracy z OpenGL, DirectX i Skia umożliwiając szybkie rysowanie
 ff-cpp-access-extra = twórz Sieć bardziej dostępną dla użytkowników korzystających z ułatwień dostępu
 ff-cpp-net-extra = TCP, HTTP, SSL/TLS, SPDY, i inne
 ff-cpp-spider-extra = jeśli lubisz kompilatory, interpretery, JIT i inne
+ff-cpp-media-extra = odtwarzanie i przetwarzanie Audio/Wideo, WebRTC, zabawa z silnikiem multimedialnym
 ff-js-intro = Świetny wybór - jest wiele różnych dziedzin jeśli chciałbyś się specjalizować. Projekt nad którym mógłbyś pracować, to
 ff-js-ff = Ogólnie Firefox
 ff-js-dev-extra = implementuj zestaw narzędzi podobny do Firebuga prosto w przeglądarkę
 ff-js-sync-extra = pomóż użytkownikom zabrać ich personalne dane przeglądania w drogę
+swift-intro = Jesteś zmęczony Objective-C? Spoko, my też. Możesz pracować nad
+swift-ff-ios-extra = iOS frontend dla Firefoxa
+webcompat-extra = pomóż sieci być bardziej wymienną kontaktując się z właścicielami witryn
+policy-extra = walcz o wolny internet i prywatność użytkowników
+rust-intro = A więc lubisz myśleć o czasach życia i zarządzaniu zasobami? Świetnie, wszyscy tak naprawdę jesteśmy masochistami. Mógłbyś pracować nad
+rustc-extra = kompilator i standardowa biblioteka rust napisana w rust
+servo-extra = nowa przeglądarka zaprojektowana dla zrównoleglenia i bezpieczeństwa
 more = Mów dalej...
 back = Myliłem się, zabierz mnie z powrotem
 credits.innerHTML = Stronę stworzył <a href="https://www.joshmatthews.net">Josh Matthews</a>. Nie chciałbyś <a href="https://github.com/jdm/asknot">czegoś zmienić</a>?
